# rust-pastebin-test

./: README.md
rust-front-test/: Cargo.toml  index.html  style.css  trunk.toml
rust-front-test/src/: main.rs
rust-front-test/src/components/: app.rs  mod.rs  page.rs  post.rs
rust-rest-test/: .env  Cargo.toml  service.db
rust-rest-test/src/: main.rs
