[package]
name = "rust-front-test"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.208", features = ["derive"] }
log = "0.4.22"
wasm-logger = "0.2.0"

yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

gloo-net = { version = "0.6.0", features = ["json"] }
gloo-utils = "0.2.0"

web-sys = "0.3.70"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

